# mysqlbinlog-analyzer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: binlog.rs  binlog_empty_upates.rs  binlog_stats.rs  main.rs  tablestats.rs
