[package]
name = "mysqlbinlog-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Eldad Zack"]
description = "Analyzes the MySQL binlog from the decoded text output"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.21", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
regex = "1.9.5"
